@@ -20,24 +20,51 @@
 #ifndef CDCLINE_H
 #define CDCLINE_H
 
+#include <stdio.h>
 #include "CDC_file.h"
 
 /**
- *  Buffered CDCFile reader. The reading function returns one line at a time,
+ *  Callback for CDCLineBuffer input.
+ */
+typedef size_t(*CDCLineBufferIn)(char *buf, size_t length, void *userdat);
+
+/**
+ *  Buffered line reader. The reading function returns one line at a time,
  *  separated by the \n newline character in input.
  */
 typedef struct {
-  CDCFile *file;
+  CDCLineBufferIn input;
+  void *userdata;
   char *buffer;
   size_t buffersize;
 } CDCLineBuffer;
 
 /**
- *  Initialize a CDCLineBuffer structure.
- *  @param buffer CDCLineBuffer to initialize.
- *  @param file CDCFile to buffer.
+ *  Initialize a CDCLineBuffer structure. This is a generic function with a
+ *  source neutral input function. Use cdc_filebuffer_new() or
+ *  cdc_stdfilebuffer_new() to create line buffers backed by one of those two
+ *  common types of input stream.
+ *  @param input Input callback function.
+ *  @param userdata User object passed to the callback.
+ *  @return New CDCLineBuffer. Use cdc_linebuffer_free() when you're done.
  */
-CDCLineBuffer *cdc_linebuffer_new(CDCFile *file);
+CDCLineBuffer *cdc_linebuffer_new(CDCLineBufferIn input, void *userdata);
+
+/**
+ *  Initialize a CDCLineBuffer structure for use with a CDCFile. Provides the
+ *  necessary callback internally.
+ *  @param input CDCFile to use for input.
+ *  @return New CDCLineBuffer. Use cdc_linebuffer_free() when you're done.
+ */
+ CDCLineBuffer *cdc_filebuffer_new(CDCFile *input);
+
+/**
+ *  Initialize a CDCLineBuffer structure for use with a stdio FILE pointer.
+ *  Provides the necessary callback internally.
+ *  @param input FILE* to use for input.
+ *  @return New CDCLineBuffer. Use cdc_linebuffer_free() when you're done.
+ */
+CDCLineBuffer *cdc_stdfilebuffer_new(FILE *f);
 
 /**
  *  Read a single line. Blocks until a line is available.
@@ -53,7 +80,7 @@ void cdc_linebuffer_freeline(char *line);
 
 /**
  *  Free the resources taken by a linebuffer. Does NOT close the associated
- *  CDCFile.
+ *  stream.
  *  @param buffer CDCLineBuffer to free.
  */
 void cdc_linebuffer_free(CDCLineBuffer *buffer);
